<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/am_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/am_textViewText" />

    <EditText
        android:id="@+id/am_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/am_editViewText" />

    <Button
        android:id="@+id/am_nextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/am_nextButtonText" />
</LinearLayout>